// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressBar Should allow glamor rule as className 1`] = `
<div
  className="Toastify__progress-bar Toastify__progress-bar--default"
  onAnimationEnd={[Function]}
  style={
    Object {
      "WebkitAnimationPlayState": "running",
      "animationDuration": "5000ms",
      "animationPlayState": "running",
      "opacity": 1,
    }
  }
/>
`;

exports[`ProgressBar Should be able to hide the progress bar 1`] = `
<div
  className="Toastify__progress-bar Toastify__progress-bar--default"
  onAnimationEnd={[Function]}
  style={
    Object {
      "WebkitAnimationPlayState": "running",
      "animationDuration": "5000ms",
      "animationPlayState": "running",
      "opacity": 0,
    }
  }
/>
`;

exports[`ProgressBar Should be able to pause animation 1`] = `
<div
  className="Toastify__progress-bar Toastify__progress-bar--default"
  onAnimationEnd={[Function]}
  style={
    Object {
      "WebkitAnimationPlayState": "paused",
      "animationDuration": "5000ms",
      "animationPlayState": "paused",
      "opacity": 1,
    }
  }
/>
`;
